Fixed form submit bug
Changed http to https

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -39,7 +39,7 @@
 
 		Contact me if you have any questions:
 
-		<form method="POST" action="http://formspree.io/mborzenkov-dev@yandex.ru">
+		<form method="POST" action="https://formspree.io/mborzenkov-dev@yandex.ru">
 		  <input type="email" name="email" placeholder="Your email">
 		  <textarea name="message" placeholder="Your message"></textarea>
 		  <input type="hidden" name="_next" value="/message-sent" />
