--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -37,7 +37,7 @@
           </ul>
         {% endif %}
 
-		<form method="POST" action="http://formspree.io/mborzenkov-dev@yandex.ru">
+		<form method="POST" action="https://formspree.io/mborzenkov-dev@yandex.ru">
 		  <input type="email" name="email" placeholder="Your email">
 		  <textarea name="message" placeholder="Your message"></textarea>
 		  <input type="hidden" name="_next" value="/message-sent" />
