--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -6,12 +6,13 @@
 
 {% seo %}
 
+	<link rel="stylesheet" href="{{ '/assets/font-awesome/css/font-awesome.min.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-	{% if page.metatags %} 
+	{% if page.metatags %}
 		<meta name="robots" content="{{page.metatags}}">
 	{% endif %}
   </head>
@@ -37,14 +38,6 @@
           </ul>
         {% endif %}
 
-		<form method="POST" action="https://formspree.io/mborzenkov-dev@yandex.ru">
-		  <input type="email" name="email" placeholder="Your email">
-		  <textarea name="message" placeholder="Your message"></textarea>
-		  <input type="hidden" name="_next" value="/message-sent" />
-          <input type="hidden" name="_subject" value="New message from github Challenges-in-Java in {{ page.url }}" />
-		  <button type="submit">Send</button>
-		</form>
-
       </header>
       <section>
 
@@ -55,6 +48,11 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
+        Contact info:
+		<p>
+		<i class="fa fa-telegram"></i> <a href="https://t.me/mborzenkov">telegram</a>
+		</p>
+
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
